// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The BackgroundView component should accept extra props 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "red",
        "flex": 1,
        "height": "100%",
      }
    }
  />
</View>
`;

exports[`The BackgroundView component should render 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <View
    style={
      Object {
        "backgroundColor": "rgb(249, 249, 251)",
        "flex": 1,
        "height": "100%",
      }
    }
  />
</View>
`;

exports[`The BackgroundView component should render as a system color 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <View
    material="system"
    style={
      Object {
        "backgroundColor": "rgba(142, 142, 147, 0.2)",
        "flex": 1,
        "height": "100%",
      }
    }
  />
</View>
`;

exports[`The BackgroundView component should render with paper color 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />
  <View
    material="paper"
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "height": "100%",
      }
    }
  />
</View>
`;
